used right table for grants check (BUG#3270)

mysql-test/t/alter_table.test:
  test for BUG#3270 added